--- a/locales/es.json
+++ b/locales/es.json
@@ -105,6 +105,17 @@
 
   "footer_rights": "Todos los derechos reservados.",
   "footer_web_design": "Diseño y desarrollo web por",
-  "footer_dev_link_text": "J.A.R."
+  "footer_dev_link_text": "J.A.R.",
+
+  "nombreInvalido": "El nombre debe contener solo letras y espacios, hasta 30 caracteres.",
+  "emailInvalido": "Ingresa un correo válido.",
+  "mensajeCorto": "El mensaje debe tener al menos 10 caracteres.",
+  "confirmarEnvio": "¿Estás seguro de que deseas enviar este mensaje?",
+  "siEnviar": "Sí, Enviar",
+  "cancelar": "Cancelar",
+  "gracias": "¡Gracias por tu mensaje!",
+  "mensajeEnviado": "Tu mensaje ha sido enviado con éxito. Te responderé lo antes posible.",
+  "errorEnvio": "Hubo un error al enviar tu mensaje. Por favor, intenta nuevamente más tarde.",
+  "errorConexion": "Error de conexión. Por favor, revisa tu conexión a internet y vuelve a intentarlo."
 
 }
