--- a/locales/en.json
+++ b/locales/en.json
@@ -116,6 +116,25 @@
   "gracias": "Thank you for your message!",
   "mensajeEnviado": "Your message has been sent successfully. I will get back to you as soon as possible.",
   "errorEnvio": "There was an error sending your message. Please try again later.",
-  "errorConexion": "Connection error. Please check your internet connection and try again."
+  "errorConexion": "Connection error. Please check your internet connection and try again.",
+  "privacidadNoAceptada": "Privacy policy not accepted",
+  "debesAceptarPrivacidad": "You must accept the privacy policy to continue",
+
+  "contact_privacy_agree": "I accept the <a href='/pages/privacy.html' target='_blank'>privacy policy</a>.",
+  "contact_privacy_error": "You must accept the privacy policy.",
+
+  "privacy_title": "Privacy Policy",
+  "privacy_intro": "At Mamunias, we are committed to protecting your privacy. This policy explains how we collect, use, and safeguard your personal information.",
+  "privacy_info_title": "Information We Collect",
+  "privacy_info_text": "We may collect your name, email, and message when you fill out our contact form. This information is only used to respond to your inquiries.",
+  "privacy_use_title": "Use of Information",
+  "privacy_use_text": "We do not share, sell, or disclose your personal data to third parties. We use the information exclusively to provide you with better service.",
+  "privacy_rights_title": "User Rights",
+  "privacy_right1": "Access your personal data",
+  "privacy_right2": "Request correction or deletion",
+  "privacy_right3": "Object to the processing of your data",
+  "privacy_contact_title": "Contact",
+  "privacy_contact_text": "If you have questions about this policy, you can write to us through the ",
+  "privacy_contact_link": "contact form"
 
 }
