--- a/locales/es.json
+++ b/locales/es.json
@@ -116,6 +116,25 @@
   "gracias": "¡Gracias por tu mensaje!",
   "mensajeEnviado": "Tu mensaje ha sido enviado con éxito. Te responderé lo antes posible.",
   "errorEnvio": "Hubo un error al enviar tu mensaje. Por favor, intenta nuevamente más tarde.",
-  "errorConexion": "Error de conexión. Por favor, revisa tu conexión a internet y vuelve a intentarlo."
+  "errorConexion": "Error de conexión. Por favor, revisa tu conexión a internet y vuelve a intentarlo.",
+  "privacidadNoAceptada": "Política de privacidad no aceptada",
+  "debesAceptarPrivacidad": "Debes aceptar la política de privacidad para continuar",
+
+  "contact_privacy_agree": "Acepto la <a href='/pages/privacy.html' target='_blank'>política de privacidad</a>.",
+  "contact_privacy_error": "Debes aceptar la política de privacidad.",
+
+  "privacy_title": "Política de Privacidad",
+  "privacy_intro": "En Mamunias nos comprometemos a proteger tu privacidad. Esta política explica cómo recopilamos, usamos y protegemos tu información personal.",
+  "privacy_info_title": "Información que recopilamos",
+  "privacy_info_text": "Podemos recopilar tu nombre, correo electrónico y mensaje cuando rellenas nuestro formulario de contacto. Esta información solo se utiliza para responder a tus solicitudes.",
+  "privacy_use_title": "Uso de la información",
+  "privacy_use_text": "No compartimos, vendemos ni cedemos tus datos personales a terceros. Usamos la información exclusivamente para proporcionarte un mejor servicio.",
+  "privacy_rights_title": "Derechos del usuario",
+  "privacy_right1": "Acceder a tus datos personales",
+  "privacy_right2": "Solicitar la corrección o eliminación",
+  "privacy_right3": "Oponerte al tratamiento de tus datos",
+  "privacy_contact_title": "Contacto",
+  "privacy_contact_text": "Si tienes preguntas sobre esta política, puedes escribirnos a través del formulario de ",
+  "privacy_contact_link": "contacto"
 
 }
