Readme, ajustes imagen, traducción

--- a/locales/en.json
+++ b/locales/en.json
@@ -20,7 +20,7 @@
 
   "technique_softgel_title": "Soft Gel Nails",
   "technique_softgel_desc": "Soft gel nails are an excellent intermediate option between natural nails and acrylics. They are light and flexible, providing a natural finish that perfectly adapts to the original nail shape. One of the main advantages of soft gel nails is that they are less damaging to natural nails compared to other techniques such as acrylic or hard gel. The soft gel formula is less dense and does not require aggressive filing for either application or removal. Additionally, it can be safely used to extend nails without harming to the natural nail, making it a healthier and gentler option for nail enhancement.",
-  "technique_softgel_img_alt": "Soft Gel Nails",
+  "technique_softgel_img_alt": "Photo by Sarah Cervantes on Unsplash.",
 
   "technique_gel_title": "Gel Nails",
   "technique_gel_desc": "Gel nails are one of the most popular and widely used techniques in manicure salons due to their excellent durability and professional-looking finish. This method involves carefully applying a gel layer over the natural nail, which then hardens under a UV or LED lamp. Gel nails are known for their strength, making them an ideal choice for people with weak or easily broken nails. They also provide a more natural and seamless finish compared to acrylic nails, as the gel conforms much better to the natural shape of the nail. Despite their long-lasting and sturdy nature, gel nails remain flexible and comfortable to wear throughout the day.",
@@ -90,6 +90,7 @@
 
   "footer_about_title": "About Mamunias",
   "footer_about_link": "About me",
+  "footer_politica_link": "Privacy Policy",
 
   "aria_instagram": "Got to Instagram",
   "aria_tiktok": "Go to TikTok",
