--- a/locales/es.json
+++ b/locales/es.json
@@ -20,7 +20,7 @@
 
   "technique_softgel_title": "Uñas Soft Gel",
   "technique_softgel_desc": "Las uñas soft gel son una opción intermedia entre las uñas naturales y las de acrílico. Se caracterizan por ser ligeras y flexibles, proporcionando un acabado natural que se adapta perfectamente a la uña original. La principal ventaja de las uñas soft gel es que son menos dañinas para las uñas naturales que otras técnicas, como las de acrílico o gel duro. El gel suave es menos denso y no requiere de una lima agresiva para su colocación o retirada. Además, se puede usar para alargar las uñas sin dañar la uña natural, lo que las convierte en una opción más saludable.",
-  "technique_softgel_img_alt": "Imagen de uñas soft gel",
+  "technique_softgel_img_alt": "Foto por Sarah Cervantes en Unsplash.",
 
   "technique_gel_title": "Uñas de Gel",
   "technique_gel_desc": "Las uñas de gel son una de las técnicas más populares en los salones de manicura debido a su durabilidad y acabado profesional. Esta técnica implica la aplicación de una capa de gel sobre la uña natural, la cual se endurece bajo una lámpara UV o LED. Las uñas de gel son conocidas por su resistencia, lo que las hace ideales para personas que tienen uñas débiles o que tienden a romperse con facilidad. Además, pueden dar un acabado más natural que las uñas de acrílico, ya que el gel se adapta mejor a la forma de la uña. A pesar de ser duraderas, las uñas de gel también son flexibles y cómodas.",
@@ -90,6 +90,7 @@
 
   "footer_about_title": "Sobre Mamunias",
   "footer_about_link": "Sobre mi",
+  "footer_politica_link": "Política de Privacidad",
 
   "aria_instagram": "Ir a Instagram",
   "aria_tiktok": "Ir a TikTok",
